<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:padding="8dip"
    >



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <ImageView  android:id="@+id/sjsu"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/sjsu"
            />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/sjsu"
            android:layout_centerHorizontal="false"
            android:text="@string/activity_a_label"
            android:gravity="center_horizontal"
            android:textSize="@dimen/font_large"
            android:textColor="@color/light_blue"
            android:paddingLeft="20dp"
            />

        <Button
            android:id="@+id/btn_start_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="150dp"
            android:onClick="startActivityB"
            android:background="#ffff00"
            android:textColor="@color/black"
            android:text="@string/btn_start_b_label" />


        <Button
            android:id="@+id/btn_start_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="150dp"
            android:layout_toRightOf="@id/btn_start_b"
            android:onClick="startDialog"
            android:background="#ffff00"
            android:textColor="@color/black"
            android:text="@string/btn_start_dialog_label" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th_ctr"
            android:textColor="#ffffff"
            android:layout_below="@+id/btn_start_dialog"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            />



        <TextView
            android:id="@+id/cntval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="55dp"
            android:layout_below="@+id/btn_start_dialog"
            android:layout_toRightOf="@+id/count"
            />
        <View
            android:id="@+id/lineview"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/count"
            android:background="@android:color/white" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closeapp"
            android:textColor="#fff"
            android:layout_below="@+id/lineview"
            android:background="#000000"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:onClick="finishActivityA"
            />


    </RelativeLayout>
</LinearLayout>

